# app.js
@@ -18,6 +18,7 @@ const app = express();
 app.set('views', path.join(__dirname, 'views'));
 app.set('view engine', 'ejs');
 
+console.log("Session1");
 app.use(
   session({
     secret: process.env.SESSION_SECRET,
@@ -25,9 +26,11 @@ app.use(
     saveUninitialized: true
   })
 );
+console.log("Passport");
 
 app.use(passport.initialize());
 app.use(passport.session());
+console.log("Use");
 
 app
   .use(logger('dev'))
@@ -39,27 +42,33 @@ app
     res.setHeader('Access-Control-Allow-Origin', '*');
     next();
   })
-
+/*
+console.log("config");
   const config = {
     authRequired: false,
     auth0Logout: true,
     secret: process.env.AUTH0_CLIENT_SECRET,
-    baseURL: 'https://week8service.onrender.com',
+    baseURL: process.env.AUTH0_BASE_URL,
     clientID: process.env.AUTH0_CLIENT_ID,
     issuerBaseURL: 'https://dev-eoeqs0i46b7m7dfa.us.auth0.com'
   };
+console.log("Auth");
   
   app.use(auth(config));
-
+*/
+console.log("Port");
   const port = process.env.PORT || 8080;
+  console.log("User");
   
   // Middleware to make the `user` object available for all views
   app.use(function (req, res, next) {
     res.locals.user = req.oidc.user;
     next();
   });
+  console.log("Router");
 
   app.use('/', router);
+  console.log("Catch 404");
 
 // Catch 404 and forward to error handler
 app.use(function (req, res, next) {
@@ -69,6 +78,7 @@ app.use(function (req, res, next) {
 });
 
 // Error handlers
+console.log("Error Handlers");
 app.use(function (err, req, res, next) {
   res.status(err.status || 500);
   res.render('error', {
@@ -77,6 +87,8 @@ app.use(function (err, req, res, next) {
   });
 });
   
+console.log("initDb");
+
 mongodb.initDb((err, mongodb) => {
   if (err) {
     console.log(err);
